# kotatsuyaki.github.io

./: .editorconfig  .gitignore  CNAME  README.md  _quarto.yml  about.qmd  atom.xml  flake.nix  haskell-overlay.nix  index.html  index.qmd  rss.xml  sitemap.xml
.github/workflows/: main.yml  publish.yml
css/: code.css  default.css
drafts/: 2022-09-25-nixos-install-with-flakes.md
posts/2019-04-23-wordpress-rest-bulk-post/: index.html
posts/2019-06-24-start-emacs/: index.html
posts/2019-07-20-pihole-ap/: index.html  index.qmd
posts/2019-12-19-add-ethernet-pihole/: index.html  index.qmd
posts/2020-02-13-extract-template-params-cpp/: index.html  index.qmd
posts/2020-07-29-optimize-gitlab-pages-loadtime/: index.html  index.qmd
posts/2020-07-30-vim-coc-rust-gl-completion/: index.html
posts/2020-07-31-include-bytes-include-str-difference/: index.html
posts/2020-09-06-gentoo-podman-setup/: index.html  index.qmd
posts/2020-10-10-circle-ellipse-problem/: index.html
posts/2020-10-23-tmux-open-same-dir/: index.html  index.qmd
posts/2020-12-18-run-tensorflow-on-rtx-30/: index.html  index.qmd
posts/2021-02-17-my-tools-of-choice/: index.html  index.qmd
posts/2021-02-21-gentoo-on-rpi4-revisited/: index.html  index.qmd
posts/2021-07-04-nixos-quirks-solutions/: index.html  index.qmd
posts/2021-07-04-vim-config-in-nix/: index.html  index.qmd
posts/2021-08-08-some-shell-files-on-nixos/: index.html  index.qmd
posts/2021-09-12-lazygit-modify-commit/: index.qmd  (+1 more)
src/: CNAME
ssg/: ssg.cabal
ssg/src/: Main.hs
styles/: dark.scss  light.scss  shared.scss
(+32 files in other folders)
