cabal-version:       2.4

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >= 4.8
                   , hakyll >= 4.14
                   , pandoc >= 2.11.0
                   , pandoc-types >= 1.20
                   , text >= 1.2
                   , mtl >= 2.2
                   , filepath >= 1.4
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
